Changed cancel button to a stop button - changed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,10 @@
   position: relative;
 }
 
+.material-icons .center {
+    width: 100%;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
